--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,12 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+@import './fonts';
+
 :root {
-  font-family: Inter, sans-serif;
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @apply font-sans;
 }
 
 body {
